--- a/charts/pdvd/Chart.yaml
+++ b/charts/pdvd/Chart.yaml
@@ -9,7 +9,7 @@ keywords:
 - AI
 - SBOM
 type: application
-version: 12.0.109
+version: 12.0.110
 appVersion: 12.0.0
 dependencies:
 - name: pdvd-arangodb
@@ -19,8 +19,11 @@ dependencies:
   version: 12.0.326
   repository: https://ortelius.github.io/pdvd-backend/
 - name: pdvd-frontend
-  version: 12.0.1546
+  version: 12.0.1552
   repository: https://ortelius.github.io/pdvd-frontend/
 - name: pdvd-osvdev-job
-  version: 12.0.192
+  version: 12.0.199
   repository: https://ortelius.github.io/pdvd-osvdev-job/
+- name: pdvd-relscanner-job
+  version: 12.0.7
+  repository: https://ortelius.github.io/pdvd-relscanner-job/
